@@ -4,12 +4,12 @@ AM_INIT_AUTOMAKE([foreign])
 AC_PROG_CC
 LT_INIT
 AC_PROG_INSTALL
-# https://www.gnu.org/software//automake/manual/html_node/maintainer_002dmode.html
-# Adding maintainer mode because I don't want to require people to install automake 1.17
-# in order to run the test suite. Caveats are described in the above link
-# One being that maintainers have to make sure that the Makefile.in files are updated manually
-# This helps with github actions
-AM_MAINTAINER_MODE([enable])
+dnl https://www.gnu.org/software//automake/manual/html_node/maintainer_002dmode.html
+dnl Disabling maintainer mode because I don't want to require people to install automake 1.17
+dnl in order to run the test suite. Caveats are described in the above link
+dnl One being that maintainers have to make sure that the Makefile.in files are updated manually
+dnl This helps with github actions
+AM_MAINTAINER_MODE([disable])
 
 # Checks for libraries
 case "$host" in
