@@ -5,6 +5,7 @@ Nagios Core 4 Change Log
 4.5.5 - 2024-XX-XX
 ------------------
 * Update configure scripts using newer versions of autotools (Dylan Anderson)
+* Disable maintainer mode for TAP testing and add Github Actions (Dylan Anderson)
 
 4.5.4 - 2024-08-14
 ------------------
